Fixed spacing

--- a/src/MessageArea/MessageArea.css
+++ b/src/MessageArea/MessageArea.css
@@ -5,3 +5,7 @@
 .link-text {
     background: white;
 }
+
+svg {
+    margin-top: 5px;
+}
